[tool.poetry]
name = "jobbergate-documentation"
version = "5.9.0a0"
description = "Jobbergate Official Documentation"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
repository = "https://github.com/omnivector-solutions/jobbergate"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.17"
mkdocstrings-python = "^1.8.0"
pygments = "^2.19.2"
jobbergate-core = { path = "../jobbergate-core", develop = true }
jobbergate-api = { path = "../jobbergate-api", develop = true }
jobbergate-cli = { path = "../jobbergate-cli", develop = true }
jobbergate-agent = { path = "../jobbergate-agent", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
