[project]
name = "jobbergate-documentation"
description = "Jobbergate Official Documentation"
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material>=9.4.2",
    "mkdocstrings[python]>=0.23.0",
    "pygments>=2.16.1",
    "jobbergate-core",
    "jobbergate-api",
    "jobbergate-cli",
    "jobbergate-agent",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/omnivector-solutions/jobbergate"

[dependency-groups]
dev = []

[tool.uv.sources]
jobbergate-core = { workspace = true }
jobbergate-api = { workspace = true }
jobbergate-cli = { workspace = true }
jobbergate-agent = { workspace = true }


[tool.ruff]
line-length = 120


[build-system]
requires = [
    "hatchling>=1.28.0",          # Build the package
    "hatch-dependency-coversion", # pin jobbergate-core to the same version as the cli at build time
    "hatch-vcs",                  # Recover the version from current git tag
]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.dependency-coversion]
override-versions-of = [
    "jobbergate-agent",
    "jobbergate-api",
    "jobbergate-cli",
    "jobbergate-core",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { search_parent_directories = true, version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "docs/_version.py"
