[tool.poetry]
name = "jobbergate-slurp"
version = "0.1.0"
description = "Scripts for slurping jobbergate data from legacy to next-gen"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
packages = [ { include = "slurp" } ]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.1"
psycopg = "^3.0.3"
pydantic = "^1.8.2"
loguru = "^0.5.3"
typer = "^0.4.0"
pgcli = "^3.2.0"
snick = "^1.0.0"
httpx = "^0.20.0"
py-buzz = "^2.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
slurp = "slurp.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
