[tool.poetry]
name = "jobbergate-slurp"
version = "0.1.0"
description = "Scripts for slurping jobbergate data from legacy to next-gen"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
packages = [ { include = "slurp" } ]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
psycopg = "^3.0.3"
pydantic = "^1.8.2"
loguru = "^0.6.0"
typer = "^0.4.0"
pgcli = "^3.2.0"
snick = "^1.0.0"
httpx = "^0.23.0"
py-buzz = "^3.1.0"
boto3 = "^1.20.8"
file-storehouse = "^0.3.4"
jobbergate-api = {path = "../jobbergate-api"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pyproject-flake8 = "^0.0.1-alpha.4"

[tool.poetry.scripts]
slurp = "slurp.main:app"

[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max_line_length = 110
exclude = "alembic/*"
ignore = "D200,D106,D402"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
