[tool.poetry]
name = "jobbergate-test"
version = "0.1.0"
description = "Jobbergate CLI Client"
authors = ["Omnivector Solutions <info@omnivector.solutions>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/omnivector-solutions/jobbergate"
packages = [{ include = "jobbergate_test" }]

[tool.poetry.dependencies]
python = "^3.10"
jobbergate-cli = { path = "../jobbergate-cli" }

[tool.poetry.dev-dependencies]
mypy = "^1.10"
ruff = "^0.4.9"

[tool.poetry.scripts]
test-jobbergate = "jobbergate_test.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
