[project]
name = "jobbergate-test"
description = "Jobbergate CLI Client"
authors = [
    { name = "Omnivector Solutions", email = "info@omnivector.solutions" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jobbergate-cli"]
dynamic = ["version"]

[project.scripts]
test-jobbergate = "jobbergate_test.main:main"

[project.urls]
Repository = "https://github.com/omnivector-solutions/jobbergate"

[dependency-groups]
dev = []

[tool.uv.sources]
jobbergate-cli = { workspace = true }

[build-system]
requires = [
    "hatchling>=1.28.0",          # Build the package
    "hatch-dependency-coversion", # pin jobbergate-cli to the same version as the test at build time
    "hatch-vcs",                  # Recover the version from current git tag
]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.dependency-coversion]
override-versions-of = ["jobbergate-cli"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
raw-options = { search_parent_directories = true, version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "jobbergate_test/_version.py"
